Fix horizontal scrollbar on launch

--- a/static/css/overlays/loader.css
+++ b/static/css/overlays/loader.css
@@ -1,3 +1,7 @@
+body {
+  overflow: hidden;
+}
+
 /* Loading container, placed above everything. */
 #loadingContainer {
   align-items: center;
